2on/frontend/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: 2on-frontend
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  type: ClusterIP
